first stab at preventing long strings without spaces from overflowing their containers

--- a/src/Card.css
+++ b/src/Card.css
@@ -1,6 +1,8 @@
 .card {
   background-size: cover;
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("images/card-bg.png");
+  word-wrap: break-word;
+  -moz-hyphens: auto;
 }
 
 .card-sub .material-icons {
